@@ -1,3 +1,5 @@
+        * LeafEditor: added fix button to fix warnings (if model provides a fix)
+
 2010-12-21  Dominique Dumont  <domi.dumont@free.fr> 1.318
 
 	* ListEditor: changed label of push button (minor)
